--- a/.travis.yml
+++ b/.travis.yml
@@ -10,13 +10,13 @@ go:
 
 before_install:
   - git config --global url."git@github.com:".insteadOf "https://github.com/"
-  - go get github.com/axw/gocov/gocov
-  - go get github.com/AlekSi/gocov-xml
-  - go get gopkg.in/h2non/gock.v1
-  - go get github.com/JormungandrK/microservice-tools
-  - go get github.com/JormungandrK/microservice-security
-  - go get github.com/goadesign/goa/...
-  - go get gopkg.in/mgo.v2
+  - go get -u github.com/axw/gocov/gocov
+  - go get -u github.com/AlekSi/gocov-xml
+  - go get -u gopkg.in/h2non/gock.v1
+  - go get -u github.com/JormungandrK/microservice-tools
+  - go get -u github.com/JormungandrK/microservice-security
+  - go get -u github.com/goadesign/goa/...
+  - go get -u gopkg.in/mgo.v2
 
 before_script:
   - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
