--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ before_install:
   - go get -u github.com/AlekSi/gocov-xml
   - go get -u gopkg.in/h2non/gock.v1
   - go get -u github.com/JormungandrK/microservice-tools
-  - go get -u github.com/JormungandrK/microservice-security
+  - go get -u github.com/JormungandrK/microservice-security/...
   - go get -u github.com/goadesign/goa/...
   - go get -u gopkg.in/mgo.v2
   - go get -u github.com/afex/hystrix-go/hystrix
