--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,10 @@
 
 # Project-local glide cache, RE: https://github.com/Masterminds/glide/issues/736
 .glide/
+
+# SSH Keys directory
+keys
+ssh-keys
+saml-keys
+.keys
+.ssh-keys
