--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ script:
     ./cc-test-reporter upload-coverage -i coverage.json;
     fi
 after_success:
-  - if [ "$TRAVIS_BRANCH" == "master" ]; then
+  - if [ "$TRAVIS_BRANCH" == "master" ] && [ "$TRAVIS_PULL_REQUEST" == "false" ]; then
     docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
     make push;
     fi
